k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golang-be
  labels:
    app.kubernetes.io/name: golang-be
